fixed translation alignment and footer

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -12,9 +12,6 @@ body {
 
 /* Google Translate
 ---------------------------------------------------*/
-.translate {
-    margin-left: 128px;
-}
 
 /* Sticky footer styles
 -------------------------------------------------- */
